give in and use rerunfailures for flaky tests

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist = py26,py27,pypy,py32,py33,py34,pypy3,lint
 deps =
     coverage
     pytest
+    pytest-rerunfailures
 commands =
     # We use parallel mode and then combine here so that coverage.py will take
     # the paths like .tox/py34/lib/python3.4/site-packages/hypothesis/__init__.py
@@ -23,6 +24,7 @@ commands =
 deps =
     coverage
     pytest
+    pytest-rerunfailures
 commands =
     ./basic-test.sh
 
@@ -30,8 +32,9 @@ commands =
 deps =
     coverage
     pytest
+    pytest-rerunfailures
 commands =
-    python -m pytest --capture=no --strict --ignore=tests/test_recursively.py tests/
+    ./basic-test.sh
 
 [testenv:lint]
 deps =
