don't specify reruns in pytest.ini because it interferes with extras tests

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ commands =
     # and collapse them into src/hypothesis/__init__.py.
     coverage run --parallel-mode -a --branch --include 'src/hypothesis' \
         --omit 'src/hypothesis/settings.py,src/hypothesis/internal/compat.py,src/hypothesis/extra.py' \
-        -m pytest --strict --ignore=tests/test_recursively.py tests/
+        -m pytest --strict --reruns=1 --ignore=tests/test_recursively.py tests/
     ./database-test.sh
     coverage combine
     coverage report -m --fail-under=100
