restore old coveragerc

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,6 @@
 [run]
 branch = True
-include =
-  src/**/*.py
-  hypothesis-extra/*/src/**/*.py
+include = src/**/*.py
 omit =
     src/hypothesis/settings.py
     src/hypothesis/internal/compat.py
@@ -11,9 +9,7 @@ omit =
 [paths]
 source =
    src/
-   hypothesis-extra/*/src/
    .tox/*/lib/python*/site-packages/hypothesis
-   .tox/*/lib/python*/site-packages/hypothesis-*
 
 [report]
 exclude_lines =
