--- a/tox.ini
+++ b/tox.ini
@@ -20,12 +20,19 @@ basepython=python3.4
 deps =
     coverage==3.7.1
     pytest
-    pytest-rerunfailures
 commands =
     coverage --version
     coverage debug sys
     coverage run --rcfile=.coveragerc -m pytest --strict tests/cover
     coverage report -m --fail-under=100 --show-missing
+
+[testenv:debug]
+basepython=~/snakepit/python3.4-debug
+deps =
+    pytest
+commands =
+    python -m pytest --strict tests/cover
+
 
 [testenv:examples3]
 basepython=python3.4
