No path expansion in tox, but we don't need it

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands =
     coverage report -m --fail-under=100 --show-missing
 
 [testenv:debug]
-basepython=~/snakepit/python3.4-debug
+basepython=python3.4-debug
 deps =
     pytest
 commands =
