Pytest assertion rewriting breaks on debug builds

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ basepython=python3.4-debug
 deps =
     pytest
 commands =
-    python -m pytest --strict tests/cover
+    python -m pytest --strict --assert=plain --capture=no tests/cover
 
 
 [testenv:examples3]
