Introduce concept of strict mode
In strict mode all deprecation warnings are errors. This adds a build
step that tries to run the whole test suite in strict mode, and changes
examples to run in strict mode.

--- a/tox.ini
+++ b/tox.ini
@@ -14,14 +14,24 @@ basepython=python3.4
 deps =
     coverage==3.7.1
     pytest
-    pytest-rerunfailures
 commands =
     coverage --version
     coverage debug sys
     coverage run --rcfile=.coveragerc -m pytest --strict tests/cover
     coverage report -m --fail-under=100 --show-missing
 
+[testenv:strict]
+basepython=python3.4
+deps =
+    pytest
+setenv=
+    HYPOTHESIS_STRICT_MODE=true
+commands =
+    ./basic-test.sh
+
 [testenv:examples3]
+setenv=
+    HYPOTHESIS_STRICT_MODE=true
 basepython=python3.4
 deps=pytest
 commands=
@@ -29,6 +39,8 @@ commands=
 
 
 [testenv:examples2]
+setenv=
+    HYPOTHESIS_STRICT_MODE=true
 basepython=python2.7
 deps=pytest
 commands=
