--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
     matrix:
         - TOXENV=coverage
         - TOXENV=lint
+        - TOXENV=strict
         - TOXENV=examples2
         - TOXENV=examples3
         - TOXENV=pypy
@@ -40,6 +41,8 @@ matrix:
           env: TOXENV=examples2
         - os: osx
           env: TOXENV=examples3
+        - os: osx
+          env: TOXENV=strict
         - os: osx
           env: TOXENV=coverage
         - os: osx
