Force newer version of coverage

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands =
 [testenv:coverage]
 basepython=python3.4
 deps =
-    coverage==3.7.1
+    coverage>=4.0a3
     pytest
 commands =
     coverage --version
