--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
         - $HOME/.pyenv
         - $HOME/.venv
         - $HOME/.cache/pip
+        - $HOME/.hypothesis-tox
 
 env:
     matrix:
