--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [tox]
 envlist = py26,py27,pypy,py32,py33,py34,pypy3,lint
+setenv=
+  LC_ALL=en_GB.UTF-8
+
 
 [testenv]
 # If you add a new dep here you probably need to add it in setup.py as well
