Apparently setenv needs to be in testenv too

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ setenv=
 # If you add a new dep here you probably need to add it in setup.py as well
 deps =
     pytest
+setenv=
+  LC_ALL=en_GB.UTF-8
 commands =
     ./basic-test.sh
 
